# AccOps

./: .gitignore  CLAUDE.md  LICENSE  README.md  start.sh  stop.sh
backend/: .coverage  .env.example  .gitignore  alembic.ini  app.py  config.py  conftest.py  deps.py  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 00362b26efcb_add_pool_use_count_and_pool_status.py  304a18ac2872_drop_account_country_columns.py  397999fb03da_drop_account_group_name.py  45b599f17cee_add_pool_last_used_at.py  47a1d8b041a2_initial_schema.py  638875af4104_add_tags_tables.py  640a8aedf3cf_db_hardening_indexes_and_timestamptz.py  785fbf1b23f0_drop_account_tags_column.py  b878cdb82c7e_rename_pool_status_drop_dead_pool_fields.py
backend/core/: constants.py  parsing.py
backend/models/: database.py  orm.py  schemas.py
backend/routers/: accounts.py  auth.py  automation.py  automation_helpers.py  automation_swap.py  automation_ws.py  browser.py  cliproxy.py  dashboard.py  groups.py  settings.py  sms.py  tags.py
backend/services/: account.py  account_import_parser.py  age_verification.py  auth.py  auth_steps.py  automation.py  automation_types.py  automation_utils.py  browser.py  cliproxy.py  family_api.py  group.py  group_sync.py  oauth.py  oauth_support.py  page_wait.py  runtime_config.py  sms_api.py  tag.py  verification.py
backend/services/automation/: __init__.py  persistence.py  runners.py  types.py  ws_helpers.py
backend/services/automation/core/: _shared.py  discover.py  family_ops.py  login.py
backend/services/automation/orchestrator/: swap.py
backend/tests/: test_account_import_parser.py  test_auth_token_persistence.py  test_automation_router_helpers.py  test_automation_wrappers.py  test_browser_prune.py  test_config_defaults.py  test_family_api.py  test_group_sync.py  test_oauth_support.py  test_runtime_config.py  test_tag_service.py
backend/utils/: crypto.py
docs/: ARCHITECTURE.md  (+2 more)
(+82 files in other folders)
